# handcalcs_nbconvert_exporter_old

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
handcalcs_exporter/: __init__.py
templates/handcalcs_html/: conf.json  index.html.j2
