[tool.poetry]
name = "handcalcs_exporter"
version = "0.1.0"
description = "A custom nbconvert exporter for use with handcalcs"
authors = ["Connor Ferster <connorferster@gmail.com>"]
license = "apache"

[tool.poetry.dependencies]
python = "^3.7"
jupyter-core = "^4.7.1"
traitlets = "^5.0.5"
nbconvert = "^6.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
